tests/ui/typeck/duplicate_overloaded_items.stderr
error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | event E1();
   |       ^^
LL | event E1();
   |       -- other declaration

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | event E2(uint);
   |       ^^
LL | event E2(uint);
   |       -- other declaration

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | event E3(uint);
   |       ^^
LL | event E3(uint) anonymous;
   |       -- other declaration

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | event E4(uint);
   |       ^^
LL | event E4(uint indexed);
   |       -- other declaration

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f1() {}
   |          ^^
LL | function f1() {}
   |          -- other declaration

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f2() {}
   |          ^^
LL | function f2() {}
   |          -- other declaration
LL | function f2() {}
   |          -- other declaration

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f2_2(uint) {}
   |          ^^^^
LL | function f2_2(uint) {}
   |          ---- other declaration

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f5(int) {}
   |          ^^
LL | function f5(int) {}
   |          -- other declaration

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f6(string memory) {}
   |          ^^
LL | function f6(string calldata) {}
   |          -- other declaration

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E1();
   |           ^^
LL |     event E1();
   |           -- other declaration

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E2(uint);
   |           ^^
LL |     event E2(uint);
   |           -- other declaration

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E3(uint);
   |           ^^
LL |     event E3(uint) anonymous;
   |           -- other declaration

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E4(uint);
   |           ^^
LL |     event E4(uint indexed);
   |           -- other declaration

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f1() public {}
   |              ^^
LL |     function f1() public {}
   |              -- other declaration

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f2() public {}
   |              ^^
LL |     function f2() public {}
   |              -- other declaration
LL |     function f2() public {}
   |              -- other declaration

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f22() public {}
   |              ^^^
LL |     function f22() public {}
   |              --- other declaration
LL |     function f22() public {}
   |              --- other declaration

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f5(int) public {}
   |              ^^
LL |     function f5(int) public {}
   |              -- other declaration

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f6(string memory) public {}
   |              ^^
LL |     function f6(string calldata) public {}
   |              -- other declaration

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E5();
   |           -- other declaration
...
LL |     event E5() anonymous;
   |           ^^

error: aborting due to 19 previous errors

